@@ -218,6 +218,12 @@ class Domain(object):
         """Process a document after it is read by the environment."""
         pass
 
+    def process_field_xref(self, pnode):
+        """Process a pending xref created in a doc field.
+        For example, attach information about the current scope.
+        """
+        pass
+
     def resolve_xref(self, env, fromdocname, builder,
                      typ, target, node, contnode):
         """Resolve the pending_xref *node* with the given *typ* and *target*.
